--- a/README.org
+++ b/README.org
@@ -20,23 +20,23 @@ I choose this pretty much because most of the other Wayland compatible bars had 
 Found here.
 It's a menu, it looks nice, it works for me.
 
-** Window manager - Foot
+** Window manager - Alacritty/Foot
 Found here.
-I spent ages looking into getting Emacs to use the terminal colors, stared working on a custom theme, spend a lot of time swearing at the current state of Emacs theming, and then by accident found that if I spawned the emacs client from a new Bash shell launched from Foot, that I got the functionlity I was look for, I also found far, far too many commas, so fuck it, using em up here.
+It all comes down to Emacs and theming.  Using foot an a slightly convoluted way to invoke Emacs, I can get Emacs to use the default terminal colours.  But with Alacritty, it uses the Emacs defaults.  Wait a minute....
 
 ** File Manager - Thunar
 Found here
-Really only used to make dealing with removable media
+Really only used to make dealing with removable media less of a pain.
 
 * To Do
  - [ ] Add GTK3 theme
  - [ ] Add Kora icons
- - [ ] Find out whhy Waybar "desktop" numbers are displayed in black
  - [ ] Fix the annoying layout issues.
  - [ ] Get volume/mute keys working.
    - [ ] Use css to add a divider between items (i.e. right-border).
    - [ ] Find better icons for pulseaudio.
  - [ ] Script (Janet) to preiew different backends for py-wal?
- - [ ]
- - [ ] Custom kernel, fuck it - rice hard or erm, just install a regular destop and actualy have a life.  Damnit.....
+ - [ ] Look into the Emacs theme again, if foot is causing stability issues, will need to go back to Alacritty.
+ - [ ] Custom kernel, fuck it - rice hard or erm, just install a regular destop and actualy have a life.  Dammit.....
  - [ ] Add bluetooth suport at some point if just for completeness as a desktop!  Hardly ever use it, if at all.
+ - [X] Find out why Waybar "desktop" numbers are displayed in black
